# poetry-playground

./: README.md  pyproject.toml
module/: core.py
tests/: test_core.py
